fix rewards layout on mobile frame

--- a/public/CSS_Files/rewards.css
+++ b/public/CSS_Files/rewards.css
@@ -52,7 +52,7 @@ label[for="greetings"]{
     box-shadow: 0 2px 5px rgba(100, 100, 100, 0.3);
     border-radius: 10px;
     width: 95%;
-    padding: 10px;
+    padding: .5em;
     cursor: pointer;
     display: grid;
     grid-template-areas:
@@ -78,12 +78,11 @@ label[for="greetings"]{
 .image-container > img{
     width:fit-content;
     height:fit-content;
-
 }
 
 .rewards-title{
     grid-area: rewards-title;
-    padding: 10px
+    padding: .2em;
 }
 
 .rewards-info{
@@ -117,18 +116,23 @@ button:hover{
 
 @media(max-width: 768px) {
     .rewards-container{
-
+        gap: .2em;
+        justify-content: center;
         grid-template-areas:
-        'rewards-title rewards-title image-container'
-        'cost cost image-container'
-        'button button image-container'
-        'rewards-info rewards-info   rewards-info '
-        'rewards-info rewards-info  rewards-info';
+        'image-container image-container'
+        'rewards-title rewards-title'
+        'cost cost'
+        'button button'
+        'rewards-info rewards-info'
+        'rewards-info rewards-info';
         
     }
 
-    .image-container > img{
-        aspect-ratio: 4/6;
+    .image-container {
+        justify-content: center;
+        width: 100%;
         height: 100%;
+        overflow: hidden;
+        
     }
 }
